Fix gradle run/check